# preprocess_cancellation

./: .gitignore  .pre-commit-config.yaml  README.md  preprocess_cancellation.py  preprocessor.spec  pyproject.toml  requirements.txt  setup.py  test_preprocessor.py  test_preprocessor_with_shapely.py  tox.ini
.github/workflows/: main.yml
GCode/: .gitignore  cura.gcode  cura.out.gcode  ideamaker.gcode  ideamaker.out.gcode  kisslicer.1.6.3.gcode  m486.gcode  prusaslicer-issue1.gcode  prusaslicer.gcode  prusaslicer.out.gcode  simplify3d.gcode  slic3r.gcode  slic3r.out.gcode  superslicer.gcode  superslicer.out.gcode  superslicer.supported.gcode  tapered_cube_superslicer.gcode
GCode/inverted_pyramid/: cura.gcode  ideamaker.gcode  m486.gcode  superslicer.gcode
GCode/unsupported/: icesl.gcode  kirimoto.gcode  kisslicer.2.0.6.gcode
Preprocessor/: preprocessor.py  pyproject.toml  test_preprocessor.py
STLs/: cube_1.stl  cylinder_2.stl  gen_objects.py  gen_objects.pyscad  inverted_pyramid.stl  tapered_cube.stl  union_3.stl
cura/: PreprocessCancellation.py
preprocess_cancellation/: __init__.py  __main__.py  __version__.py  cli.py  gcode.py  hulls.py  layers.py  types.py  utils.py
preprocess_cancellation/slicers/: __init__.py  cura.py  ideamaker.py  m486.py  slic3r.py
preprocess_cancellation/tools/: m486.py  plot_defines.py
tests/: test_hulls.py  test_hulls_shapely.py  test_layer_filters.py  test_preprocessor.py  test_preprocessor_with_shapely.py  test_slicer_layer_filters.py  utils.py
tools/: m486.py  plot_defines.py
