[tool.poetry]
name = "preprocess_cancellation"
version = "0.2.0"
description = "GCode processor to add klipper cancel-object markers"
readme = "README.md"
authors = ["Franklyn Tackitt <im@frank.af>"]
repository = "https://github.com/kageurufu/cancelobject-preprocessor"
license = "GPL-3.0-only"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kageurufu/cancelobject-preprocessor/issues"

[tool.poetry.scripts]
preprocess_cancellation = 'preprocess_cancellation:_main'

[tool.poetry.extras]
shapely = [ "shapely" ]

[tool.poetry.dependencies]
python = ">= 3.6.2"

shapely = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
black = "*"
coverage = { version = "*", extras = ["toml"] }
isort = "*"
matplotlib = "*"
pyinstaller = "*"
pytest = "*"
pytest-cov = "*"
shapely = "*"

[tool.black]
line_length = 120

[tool.pytest.ini_options]
addopts = '-v --cov=preprocess_cancellation'

[tool.coverage.run]
branch = true
